aws-nginx-ingress-nlb/1-echo-hostname.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hostname-deployment
  labels:
    app: hostname-service-label

spec:
  replicas: 3
  selector:
    matchLabels:
      app: hostname-service-label

  template:
    metadata:
      labels:
        app: hostname-service-label

    spec:
      containers:
        - name: hostname-service-container
          image: alicek106/rr-test:echo-hostname
          ports:
          - containerPort: 80
          imagePullPolicy: Always
