aws-nginx-ingress-nlb/2-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-service

spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: hostname-service-label

  type: ClusterIP
